--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,23 @@
             #screen {
                 width: 100%;
                 height: 100%;
-                font-family: 'Courier New', Courier, monospace;
                 white-space: pre;
+            }
+            
+            .screen {
+                font-family: 'Courier New', Courier, monospace;
+            }
+
+            .measure-text {
+                position: absolute;
+                height: auto;
+                width: auto;
+                white-space: nowrap;
             }
         </style>
     </head>
     <body>
-        <div id="screen"></div>
+        <div id="screen" class="screen"></div>
         <script src="https://cdn.jsdelivr.net/npm/@assemblyscript/loader/umd/index.js"></script>
         <script src="index.js"></script>
     </body>
