--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,12 @@
                 padding: 0;
             }
 
-            #screen {
+            #screen, #screen div {
                 width: 100%;
                 height: 100%;
                 white-space: pre;
+                position: absolute;
+                top: 0; left: 0;
             }
             
             .screen {
