--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,12 @@
                 white-space: pre;
                 position: absolute;
                 top: 0; left: 0;
+                -webkit-touch-callout: none;
+                -webkit-user-select: none;
+                -khtml-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
             }
             
             .screen {
