--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
                 padding: 0;
             }
 
-            #screen, #screen div {
+            #screen, #screen div, #click-target {
+                z-index: 100;
                 width: 100%;
                 height: 100%;
                 white-space: pre;
@@ -22,6 +23,10 @@
                 -moz-user-select: none;
                 -ms-user-select: none;
                 user-select: none;
+            }
+
+            #click-target {
+                z-index: 9001;
             }
             
             .screen {
@@ -38,6 +43,7 @@
     </head>
     <body>
         <div id="screen" class="screen"></div>
+        <div id="click-target"></div>
         <script src="index.js"></script>
     </body>
 </html>
