--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
             }
             
             .screen {
+                font-size: 4px;
                 font-family: 'Courier New', Courier, monospace;
             }
 
