--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
                 padding: 0;
             }
 
-            #screen, #screen div, #click-target {
+            #screen, #screen div, #click-target, .grid {
                 z-index: 100;
                 width: 100%;
                 height: 100%;
@@ -25,7 +25,7 @@
                 user-select: none;
             }
             
-            #screen, #click-target { top: 25px; left: 25px; }
+            #screen, #click-target, .grid { top: 25px; left: 25px; }
 
             #click-target {
                 z-index: 9001;
@@ -42,11 +42,19 @@
                 width: auto;
                 white-space: nowrap;
             }
+
+            .grid {
+                background-image:
+                repeating-linear-gradient(#ccc 0 1px, transparent 1px 100%),
+                repeating-linear-gradient(90deg, #ccc 0 1px, transparent 1px 100%);
+                background-size: 9.625px 16px;
+            }
         </style>
     </head>
     <body>
         <div id="screen" class="screen"></div>
         <div id="click-target"></div>
+        <!-- <div class="grid"></div> -->
         <script src="index.js"></script>
     </body>
 </html>
