--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
             }
 
             #screen, #screen div, #click-target, .grid {
+                cursor: none;
                 z-index: 100;
                 width: 100%;
                 height: 100%;
