Make it more likely that layout boundaries are created for map elements

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,10 @@
                 -moz-user-select: none;
                 -ms-user-select: none;
                 user-select: none;
+                overflow: hidden;
             }
             
-            .top-level-element { top: 25px; left: 25px; }
+            .top-level-element { top: 25px; left: 25px; overflow: hidden; }
 
             #click-target {
                 z-index: 9001;
@@ -35,6 +36,7 @@
             .screen {
                 font-size: 4px;
                 font-family: 'Courier New', Courier, monospace;
+                overflow: hidden;
             }
 
             .measure-text {
