Render all map block containers on level load

--- a/src/index.html
+++ b/src/index.html
@@ -82,10 +82,13 @@
                 clip: rect(1px, 1px, 1px, 1px);
             }
         </style>
+
+        <style type="text/css" id="map-dimensions"></style>
     </head>
     <body>
         <input type="file" id="loadLevel">
         <div id="background" class="screen top-level-element"></div>
+        <div id="map" class="screen top-level-element"></div>
         <div id="screen" class="screen top-level-element"></div>
         <div id="loading" class="screen top-level-element"><div>loading...</div></div>
         <div id="click-target" class="top-level-element"></div>
