Define block css on evel load

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,7 @@
         </style>
 
         <style type="text/css" id="map-dimensions"></style>
+        <style type="text/css" id="block-styles"></style>
     </head>
     <body>
         <input type="file" id="loadLevel">
