Render button area html just once per level load

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
         <div id="background" class="screen top-level-element"></div>
         <div id="map" class="screen top-level-element"></div>
         <div id="screen" class="screen top-level-element"></div>
+        <div id="buttonArea" class="screen top-level-element"></div>
         <div id="loading" class="screen top-level-element"><div>loading...</div></div>
         <div id="click-target" class="top-level-element"></div>
         <!-- <div class="grid, top-level-element"></div> -->
