Ser black background colour and a default green text colour

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
                 height: 100%;
                 margin: 0;
                 padding: 0;
+                color: #0ccf11;
             }
 
             .top-level-element, .top-level-element div {
@@ -80,6 +81,10 @@
                 width: 1px;
                 overflow: hidden;
                 clip: rect(1px, 1px, 1px, 1px);
+            }
+
+            #background {
+                background-color: black;
             }
         </style>
 
